Small fixes